# nand2tetris-hs

./: .gitignore  cabal.project  flake.nix  overlay.nix
n2t-hdl/: n2t-hdl.cabal
n2t-hdl/src/: Interpreter.hs  Parser.hs
n2t-hdl/src/Parser/: Error.hs  Generator.hs  Grammar.y  Lexer.x  Monad.hs  QQ.hs  Span.hs  Syntax.hs  Token.hs
n2t-hdl/src/Parser/Syntax/: Name.hs
